--- a/asistencias/asistencias_obras/templates/rh/rh_dashboard.html
+++ b/asistencias/asistencias_obras/templates/rh/rh_dashboard.html
@@ -1,5 +1,7 @@
 {% extends "layouts/base_rh.html" %}
 {% block content %}
+<meta name="csrf-token" content="{{ csrf_token }}" />
+
 <head>
     <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
@@ -8,6 +10,12 @@
 
 </head>
 <h1 class="text-3xl text-black pb-6">Dashboard</h1>
+
+<div class="max-w-full px-6 py-6 mx-auto" id="summary-info"></div>
+
+
+
+
 
 <div class="p-4 rounded-lg" >
     <div class="p-4 bg-white shadow-md rounded-lg">
@@ -21,6 +29,11 @@
         </div>
     </div>
 </div>
+
+
+
+
+
 
 <div class="p-4 rounded-lg">
     <p class="text-xl pb-3 flex items-center">
@@ -75,7 +88,6 @@ $(document).ready(function() {
         success: function(response) {
             var data = response.data; // Asegúrate de que el backend responde con un objeto que tiene una propiedad "data" que es un arreglo.
             var tabla = $("#empleados tbody");
-            console.log(data);
             
             tabla.empty(); // Limpia el cuerpo de la tabla antes de añadir nuevas filas
 
@@ -129,7 +141,7 @@ $(document).ready(function() {
                     },
                     title: {
                         display: true,
-                        text: 'Progreso de la Obra: ' + nombre
+                        text: nombre
                     },
                     animation: {
                         animateScale: true,
@@ -149,6 +161,126 @@ $(document).ready(function() {
         }
     });
 });
+
+document.addEventListener("DOMContentLoaded", function () {
+    const csrftoken = document.querySelector("[name=csrf-token]").content;
+
+    fetchSummaryData(csrftoken);
+
+  });
+
+
+  function fetchSummaryData(csrftoken) {
+    fetch("/ajax/summary_week_RH/")
+      .then((response) => response.json())
+
+      .then((data) => {
+        console.log(data);
+        const summaryContainer = document.getElementById("summary-info");
+        summaryContainer.innerHTML = `
+            <div class="w-full px-6 py-6 mx-auto">
+              <!-- row 1 -->
+              <div class="flex flex-wrap -mx-3">
+                <div class="w-full max-w-full px-3 mb-6 sm:w-1/2 sm:flex-none xl:mb-0 xl:w-1/4">
+        <div class="relative flex flex-col min-w-0 break-words bg-white shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
+          <div class="flex-auto p-4">
+            <div class="flex flex-row -mx-3">
+              <div class="flex-none w-2/3 max-w-full px-3">
+                <div>
+                  <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Obra:</p>
+                  <h5 class="mb-2 font-bold dark:text-white"> ${data.obra}</h5>
+                  <p class="mb-0 dark:text-white dark:opacity-60">
+                    <span class="text-sm font-bold leading-normal text-emerald-500"></span>
+                  </p>
+                </div>
+              </div>
+              <div class="px-3 text-right basis-1/3">
+                <div class="inline-block w-12 h-12 text-center ">
+                  <i class="ni leading-none ni-money-coins text-lg relative top-3.5 text-white"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- card2 -->
+       <div class="w-full max-w-full px-3 mb-6 sm:w-1/2 sm:flex-none xl:mb-0 xl:w-1/4">
+        <div class="relative flex flex-col min-w-0 break-words bg-white shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
+          <div class="flex-auto p-4">
+            <div class="flex flex-row -mx-3">
+              <div class="flex-none w-2/3 max-w-full px-3">
+                <div>
+                  <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Empleados Laborando</p>
+                  <h5 class="mb-2 font-bold dark:text-white">${data.active_employees}</h5>
+                  <p class="mb-0 dark:text-white dark:opacity-60">
+                    <span class="text-sm font-bold leading-normal text-emerald-500"></span>
+                  </p>
+                </div>
+              </div>
+              <div class="px-3 text-right basis-1/3">
+                <div class="inline-block w-12 h-12 text-center ">
+                  <i class="ni leading-none ni-world text-lg relative top-3.5 text-white"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- card3 -->
+      <div class="w-full max-w-full px-3 mb-6 sm:w-1/2 sm:flex-none xl:mb-0 xl:w-1/4">
+        <div class="relative flex flex-col min-w-0 break-words bg-white shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
+          <div class="flex-auto p-4">
+            <div class="flex flex-row -mx-3">
+              <div class="flex-none w-2/3 max-w-full px-3">
+                <div>
+                  <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Total a Pagar</p>
+                  <h5 class="mb-2 font-bold dark:text-white">$ ${data.total_payment_for_week}</h5>
+                  <p class="mb-0 dark:text-white dark:opacity-60">
+                    <span class="text-sm font-bold leading-normal text-red-600"></span>
+                  </p>
+                </div>
+              </div>
+              <div class="px-3 text-right basis-1/3">
+                <div class="inline-block w-12 h-12 text-center rounded-circle bg-gradient-to-tl from-emerald-500 to-teal-400">
+                  <i class="ni leading-none ni-paper-diploma text-lg relative top-3.5 text-white"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- card4 -->
+      <div class="w-full max-w-full px-3 sm:w-1/2 sm:flex-none xl:w-1/4">
+        <div class="relative flex flex-col min-w-0 break-words bg-white shadow-xl dark:bg-slate-850 dark:shadow-dark-xl rounded-2xl bg-clip-border">
+          <div class="flex-auto p-4">
+            <div class="flex flex-row -mx-3">
+              <div class="flex-none w-2/3 max-w-full px-3">
+                <div>
+                  <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Empleados Activos</p>
+                  <h5 class="mb-2 font-bold dark:text-white">${data.jornadas_completas_week}</h5>
+                  <p class="mb-0 dark:text-white dark:opacity-60">
+                    <span class="text-sm font-bold leading-normal text-emerald-500"></span>
+                  </p>
+                </div>
+              </div>
+              <div class="px-3 text-right basis-1/3">
+                <div class="inline-block w-12 h-12 text-center rounded-circle bg-gradient-to-tl from-orange-500 to-yellow-500">
+                  <i class="ni leading-none ni-cart text-lg relative top-3.5 text-white"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>    
+          
+            `;
+      })
+      .catch((error) => console.error("Error:", error));
+  }
+
+
+
 
 </script>           
                 
