Update admin dashboard template with payment tables

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -136,11 +136,14 @@
 
 <div class="p-4 rounded-lg">
   <p class="text-xl pb-3 flex items-center">
-    <i class="fas fa-check mr-3"></i> Tablas de pagos
+    <i class="fas fa-check mr-3"></i>Tablas de pagos 
 </p>
 <div class="w-full mt-12 bg-white rounded-lg">
 
 <div class="p-4 bg-white shadow-md rounded-lg">  
+  <p class="text-xl pb-3 flex items-center">
+    <i class="mr-3"></i> Pagos por Empleado
+</p>
 
 
   <table id="tablaPagosEmpleados" class="table table-striped">
@@ -158,6 +161,9 @@
  </table>
 
 <hr class=" border-3 my-4">
+<p class="text-xl pb-3 flex items-center">
+  <i class="mr-3"></i> Pagos por Obra
+</p>
 <table id="tablaPagosObra" class="table table-striped">
   <thead class="bg-gray-800 text-white">
       <tr>
