Update chart colors in admin dashboard template

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -353,8 +353,14 @@ $(document).ready(function() {
               datasets: [
                 {
                   data: [progreso, resto],
-                  backgroundColor: ["#4CAF50", "#FFC107"], // Verde para progreso, amarillo para lo restante
-                  borderColor: ["#ffffff", "#ffffff"],
+                  backgroundColor: [
+                    "rgb(75, 192, 192,0.2)",
+                    "rgb(255, 206, 86,0.2)",
+                    ], // Verde para progreso, amarillo para lo restante
+                  borderColor: [
+                    "rgb(75, 192, 192,1)",
+                    "rgb(255, 206, 86,1)",
+                    ],
                   borderWidth: 1,
                 },
               ],
