--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -637,7 +637,8 @@ function cargarDatosAsistencia(timeRange, conjunto) {
         'conjunto': conjunto
       },
       success: function (response) {
-        console.log(response)
+        data = response.data;
+        console.log(data)
         const summaryContainer = document.getElementById("summary-info");
         summaryContainer.innerHTML = `
             <div class="w-full px-6 py-6 mx-auto">
@@ -650,7 +651,7 @@ function cargarDatosAsistencia(timeRange, conjunto) {
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
                   <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Obras Activas:</p>
-                  <h5 class="mb-2 font-bold dark:text-white"> ${response.active_projects}</h5>
+                  <h5 class="mb-2 font-bold dark:text-white"> ${data.active_projects}</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-emerald-500"></span>
                   </p>
@@ -673,7 +674,7 @@ function cargarDatosAsistencia(timeRange, conjunto) {
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
                   <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Empleados Laborando</p>
-                  <h5 class="mb-2 font-bold dark:text-white">${response.active_employees}</h5>
+                  <h5 class="mb-2 font-bold dark:text-white">${data.active_employees}</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-emerald-500"></span>
                   </p>
@@ -696,7 +697,7 @@ function cargarDatosAsistencia(timeRange, conjunto) {
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
                   <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Total a Pagar</p>
-                  <h5 class="mb-2 font-bold dark:text-white">$ ${response.total_payment_for_week}</h5>
+                  <h5 class="mb-2 font-bold dark:text-white">$ ${data.total_payment_for_week}</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-red-600"></span>
                   </p>
@@ -719,7 +720,7 @@ function cargarDatosAsistencia(timeRange, conjunto) {
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
                   <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Empleados Activos</p>
-                  <h5 class="mb-2 font-bold dark:text-white">${response.jornadas_completas_week}</h5>
+                  <h5 class="mb-2 font-bold dark:text-white">${data.jornadas_completas_week}</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-emerald-500"></span>
                   </p>
