Refactor views.py and admin_dashboard.html to improve code readability and remove unnecessary print statements.

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -387,7 +387,7 @@ function crearGrafica(etiquetas, datos, type, nombre, text, esHorizontal = false
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
                   <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Empleados Activos</p>
-                  <h5 class="mb-2 font-bold dark:text-white">$ ${data.jornadas_completas_week}</h5>
+                  <h5 class="mb-2 font-bold dark:text-white"> ${data.jornadas_completas_week}</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-red-600"></span>
                   </p>
@@ -410,7 +410,7 @@ function crearGrafica(etiquetas, datos, type, nombre, text, esHorizontal = false
               <div class="flex-none w-2/3 max-w-full px-3">
                 <div>
                   <p class="mb-0 font-sans text-sm font-semibold leading-normal uppercase dark:text-white dark:opacity-60">Total a Pagar</p>
-                  <h5 class="mb-2 font-bold dark:text-white">${data.total_payment_for_week}</h5>
+                  <h5 class="mb-2 font-bold dark:text-white">$ ${data.total_payment_for_week}</h5>
                   <p class="mb-0 dark:text-white dark:opacity-60">
                     <span class="text-sm font-bold leading-normal text-emerald-500"></span>
                   </p>
@@ -447,6 +447,7 @@ function crearGrafica(etiquetas, datos, type, nombre, text, esHorizontal = false
     fetch("/attendance-by-project/")
       .then((response) => response.json())
       .then((data) => {
+        console.log(data)
         const labels = data.map((item) => item.nombre);
         const fullTimeData = data.map((item) => item.full_time);
         const partTimeData = data.map((item) => item.part_time);
