--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -142,13 +142,13 @@
   <div class="p-4 bg-white shadow-md rounded-lg">  
   
   <p class="text-xl pb-3 flex items-center">
-    <i class="mr-3"></i> Pagos por Obra
+    <i class="mr-3"></i> Supervisores por Obra
   </p>
-  <table id="tablaPagosObra" class="table table-striped">
+  <table id="tablaSupervisores" class="table table-striped">
     <thead class="bg-gray-800 text-white">
         <tr>
+          <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Supervisor</th>
           <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Obra</th>
-          <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Pago</th>
         </tr>
     </thead>
     <tbody>
@@ -173,17 +173,48 @@
 ></script>
 <!-- ChartJS -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<!-- ChartJS Plugin -->
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
+
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <!-- Bootstrap Bundle JS (incluye Popper) -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
-<!-- DataTables Bootstrap 5 JS -->
-<script src="https://cdn.datatables.net/2.0.3/js/dataTables.bootstrap5.js"></script>
 
 
 <script>
+
+$(document).ready(function() {
+  $.ajax({  
+    url: "/ajax/supervisores_obras",
+    method: "GET",
+    dataType: "json",
+    success: function(respuesta) {
+      
+      data = respuesta.data;
+      console.log(data)
+      var tabla = $("#tablaSupervisores tbody");
+      tabla.empty();
+      
+
+      data.forEach(function(supervisor) {
+        var fila = '<tr>' +
+          '<td>' + supervisor.nombre + '</td>' +
+          '<td>' + supervisor.obra + '</td>' +
+          '</tr>';
+        tabla.append(fila);
+      });
+
+    },
+    error: function(error) {
+      console.error("Error en la solicitud AJAX: ", error);
+    }
+  });
+});
+
+
 $(document).ready(function(){
   $.ajax({
     url: "/ajax/tabla_pagos/",
@@ -328,7 +359,6 @@ function crearGrafica(etiquetas, datos, type, nombre, text, esHorizontal = false
       },
       success: function (response) {
         data = response.data;
-        console.log(data)
         const summaryContainer = document.getElementById("summary-info");
         summaryContainer.innerHTML = `
             <div class="w-full px-6 py-6 mx-auto">
@@ -447,7 +477,6 @@ function crearGrafica(etiquetas, datos, type, nombre, text, esHorizontal = false
     fetch("/attendance-by-project/")
       .then((response) => response.json())
       .then((data) => {
-        console.log(data)
         const labels = data.map((item) => item.nombre);
         const fullTimeData = data.map((item) => item.full_time);
         const partTimeData = data.map((item) => item.part_time);
