Refactor admin_dashboard.html to update the column header for Recursos Humanos in the admin dashboard

--- a/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
+++ b/asistencias/asistencias_obras/templates/admin/admin_dashboard.html
@@ -147,7 +147,7 @@
   <table id="tablaSupervisores" class="table table-striped">
     <thead class="bg-gray-800 text-white">
         <tr>
-          <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm text-center">Supervisor</th>
+          <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm text-center">Recursos Humanos</th>
           <th class="w-1/3 text-left py-3 px-4 uppercase font-semibold text-sm">Obra</th>
         </tr>
     </thead>
